[gd_scene load_steps=10 format=2]

[ext_resource path="res://Resources/sprinimigos.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Inimigo01.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 40.5, 27 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 48, 4 )

[node name="Inimigo01" type="KinematicBody2D" groups=["i_imortais"]]
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )
speed = 100

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 5 )
frame = 2
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -7.5, 27 )
shape = SubResource( 6 )

[node name="RayRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 60, 0 )
collision_mask = 18

[node name="RayEsq" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -60, 0 )
collision_mask = 2

[node name="Area2D" type="Area2D" parent="." groups=["i_imortais"]]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
self_modulate = Color( 0.380392, 1, 0.376471, 1 )
position = Vector2( 0, 12 )
shape = SubResource( 7 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
